change in requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ langchain-community
 langchain
 pypdf2
 faiss-cpu
+torch==2.2.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+sentence-transformers
+
